tests/fixtures/nupm/rejected/custom-without-build/nupm.nuon
{
    name: orphan_custom
    type: custom
    version: "0.1.0"
}
